# cube-1-factory-code

C001_Demo_project/: Makefile  (+4 more)
C001_Demo_project/components/lvgl_C001_GUI/: CMakeLists.txt  GUI_C001_sys.h
C001_Demo_project/components/lvgl_C001_GUI/GUI_I2Cdevice_interface/: gui_i2cdevice_interface.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_I2Cdevice_interface/include/: gui_i2cdevice_interface.h
C001_Demo_project/components/lvgl_C001_GUI/GUI_I2Cdriver/: bh1750fvi_driver.c  bmp280_driver.c  dht12_driver.c  i2c_master.c  paj7620u2_driver.c  sgp30_driver.c  tcs34725_driver.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_I2Cdriver/include/: bh1750fvi_driver.h  bmp280_driver.h  dht12_driver.h  i2c_master.h  paj7620u2_driver.h  sgp30_driver.h  tcs34725_driver.h
C001_Demo_project/components/lvgl_C001_GUI/GUI_RGBled_interface/: gui_rgbled_interface.c  sk6812_driver.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_calendar_interface/: gui_calendar_interface.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_folder_interface/: gui_folder_interface.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_font/: BAUHS93_60_font.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_gyroscop_interface/: gui_gyroscop_interface.c  mpu6886_driver.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_image/: W001_logo_icon.c  calendar_icon.c  folder_icon.c  gyroscope_icon.c  i2c_icon.c  led_icon.c  moon_icon.c  sun_icon.c  touch_icon.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_main_interface/: gui_main_interface.c  gui_sys_time.c  ip5306_driver.c  speaker_driver.c
C001_Demo_project/components/lvgl_C001_GUI/GUI_setting_interface/: backlight_pwm.c  gui_setting_interface.c  wifi_driver.c
C001_Demo_project/components/lvgl_C001_GUI/sd_spi_vfs_fat/: sd_spi_vfs.c
(+35 files in other folders)
